@@ -1,7 +1,7 @@
 /*
  * Filter generator, Cisco IOS driver
  *
- * $Id: fg-cisco.c,v 1.12 2002/08/26 22:10:37 matthew Exp $
+ * $Id: fg-cisco.c,v 1.13 2003/04/02 11:07:32 matthew Exp $
  */
 
 /* XXX - does this need skeleton rules? */
@@ -89,6 +89,8 @@ static int cb_cisco_rule(const struct filterent *ent, struct fg_misc *misc)
 
 	if(ent->proto.num == IPPROTO_TCP) APPS(rule_r, "established");
 	if(ESET(ent,LOG)) APPS(rule, "log");
+
+	if(ent->oneway) needret = 0;
 
 	oputs(rule);
 	if(needret) oputs(rule_r);
