@@ -1,4 +1,5 @@
 recent:
+	add "oneway" option
 	fix iptables log message format (append a space)
 
 0.11:
@@ -87,4 +88,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.48 2003/04/02 11:06:49 matthew Exp $
+$Id: HISTORY,v 1.49 2003/04/02 11:07:32 matthew Exp $
